# SatProphet

./: .CLAUDE.md.swp  .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  plan.md  pyproject.toml
.github/: copilot-instructions.md
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: health.py  ingest.py  predict.py  satellites.py
app/core/: config.py  database.py
app/crud/: __init__.py  satellites.py  tle.py
app/engine/: __init__.py  astroz_wrapper.py  coordinate_conv.py  predictor.py
app/ingester/: __init__.py  scheduler.py  service.py  spacetrack_client.py
app/models/: __init__.py  base.py  satellite.py  satellite_ground_track.py  tle.py
app/schemas/: ingest.py  predict.py  satellite.py
claude-test/: report-20260320-1530.md  report-20260413-1100.md  test_integration.py  test_tle_sync_fix.py
docs/: api.md  deployment-and-usage.md  test.md
migrations/: env.py  script.py.mako
migrations/versions/: 20260317_0001_init_schema.py
reports/: phase-0-report.md  phase-1-report.md  phase-2-report.md  phase-3-report.md  phase-4-report.md  phase-5-report.md  phase-6-report.md  test-report-20260317.md
tests/: test_api_endpoints.py  test_db_postgis_integration.py  test_health_placeholder.py  test_ingester_service.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css
web/src/api/: client.ts
web/src/viewer/: CesiumViewer.tsx
